@@ -1,11 +1,12 @@
 package ru.practicum.explorewithme.request.service;
 
+import jakarta.persistence.EntityManager;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import ru.practicum.explorewithme.error.exception.ConflictException;
 import ru.practicum.explorewithme.error.exception.NotFoundException;
+import ru.practicum.explorewithme.error.exception.RuleViolationException;
 import ru.practicum.explorewithme.event.dao.EventRepository;
 import ru.practicum.explorewithme.event.enums.State;
 import ru.practicum.explorewithme.event.model.Event;
@@ -19,8 +20,6 @@ import ru.practicum.explorewithme.request.model.Request;
 import ru.practicum.explorewithme.user.dao.UserRepository;
 import ru.practicum.explorewithme.user.model.User;
 
-
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -34,6 +33,7 @@ public class RequestServiceImpl implements RequestService {
     private final UserRepository userRepository;
     private final EventRepository eventRepository;
     private final RequestMapper requestMapper;
+    private final EntityManager em;
 
     @Override
     public RequestDto createRequest(Long userId, Long eventId) {
@@ -46,26 +46,25 @@ public class RequestServiceImpl implements RequestService {
                 .orElseThrow(() -> new NotFoundException("Event with id=" + eventId + " was not found"));
 
         if (requestRepository.existsByRequesterIdAndEventId(userId, eventId)) {
-            throw new ConflictException("Participation request already exists for user " + userId + " to event " + eventId);
+            throw new RuleViolationException("Participation request already exists for user " + userId + " to event " + eventId);
         }
 
         if (event.getInitiator().getId().equals(userId)) {
-            throw new ConflictException("Initiator cannot request participation in their own event");
+            throw new RuleViolationException("Initiator cannot request participation in their own event");
         }
 
         if (!event.getState().equals(State.PUBLISHED)) {
-            throw new ConflictException("Cannot participate in unpublished event");
+            throw new RuleViolationException("Cannot participate in unpublished event");
         }
 
         if (event.getParticipantLimit() > 0) {
             long confirmedRequests = requestRepository.countByEventIdAndStatus(eventId, Status.CONFIRMED);
             if (confirmedRequests >= event.getParticipantLimit()) {
-                throw new ConflictException("Participant limit reached for event");
+                throw new RuleViolationException("Participant limit reached for event");
             }
         }
 
         Request request = new Request();
-        request.setCreated(LocalDateTime.now());
         request.setEvent(event);
         request.setRequester(user);
 
@@ -76,6 +75,11 @@ public class RequestServiceImpl implements RequestService {
         }
 
         Request savedRequest = requestRepository.save(request);
+
+        // Явно перезагружаем из БД чтобы получить created
+        em.flush();
+        em.refresh(savedRequest);
+
         return requestMapper.toRequestDto(savedRequest);
     }
 
@@ -83,19 +87,21 @@ public class RequestServiceImpl implements RequestService {
     public RequestDto cancelRequest(Long userId, Long requestId) {
         log.info("Cancelling request {} for user {}", requestId, userId);
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("User with id=" + userId + " was not found"));
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("User with id=" + userId + " was not found");
+        }
 
         Request request = requestRepository.findByIdAndRequesterId(requestId, userId)
                 .orElseThrow(() -> new NotFoundException("Request with id=" + requestId + " was not found"));
 
         if (request.getStatus() != Status.PENDING && request.getStatus() != Status.CONFIRMED) {
-            throw new ConflictException("Only pending or confirmed requests can be cancelled");
+            throw new RuleViolationException("Only pending or confirmed requests can be cancelled");
         }
 
         request.setStatus(Status.CANCELED);
 
         Request cancelledRequest = requestRepository.save(request);
+
         return requestMapper.toRequestDto(cancelledRequest);
     }
 
@@ -119,11 +125,11 @@ public class RequestServiceImpl implements RequestService {
         }
 
         if (newStatus != Status.CONFIRMED && newStatus != Status.REJECTED) {
-            throw new IllegalArgumentException("Status must be CONFIRMED or REJECTED");
+            throw new IllegalArgumentException("New status must be CONFIRMED or REJECTED");
         }
 
         if (event.getParticipantLimit() == 0 || !event.getRequestModeration()) {
-            throw new ConflictException("Event does not require request moderation");
+            throw new RuleViolationException("Event does not require request moderation");
         }
 
         long confirmedCount = requestRepository.countByEventIdAndStatus(eventId, Status.CONFIRMED);
@@ -135,13 +141,13 @@ public class RequestServiceImpl implements RequestService {
                 throw new IllegalArgumentException("Request " + request.getId() + " does not belong to event " + eventId);
             }
             if (request.getStatus() != Status.PENDING) {
-                throw new ConflictException("Request " + request.getId() + " must have status PENDING");
+                throw new RuleViolationException("Request " + request.getId() + " must have status PENDING");
             }
         }
 
         if (newStatus == Status.CONFIRMED) {
             if (confirmedCount + requestsToUpdate.size() > event.getParticipantLimit()) {
-                throw new ConflictException("The participant limit has been reached");
+                throw new RuleViolationException("The participant limit has been reached");
             }
         }
 
@@ -157,7 +163,7 @@ public class RequestServiceImpl implements RequestService {
             }
         }
 
-        List<Request> updatedRequests = requestRepository.saveAll(requestsToUpdate);
+        requestRepository.saveAll(requestsToUpdate);
 
         if (newStatus == Status.CONFIRMED && confirmedCount + confirmedRequests.size() >= event.getParticipantLimit()) {
             List<Request> pendingRequests = requestRepository.findByEventIdAndStatus(eventId, Status.PENDING);
@@ -176,13 +182,13 @@ public class RequestServiceImpl implements RequestService {
             }
         }
 
-        List<RequestStatusUpdate> confirmedUpdates = confirmedRequests.stream()
-                .map(this::convertToStatusUpdate)
-                .collect(Collectors.toList());
+        List<RequestDto> confirmedUpdates = confirmedRequests.stream()
+                .map(requestMapper::toRequestDto)
+                .toList();
 
-        List<RequestStatusUpdate> rejectedUpdates = rejectedRequests.stream()
-                .map(this::convertToStatusUpdate)
-                .collect(Collectors.toList());
+        List<RequestDto> rejectedUpdates = rejectedRequests.stream()
+                .map(requestMapper::toRequestDto)
+                .toList();
 
         return new RequestStatusUpdateResult(confirmedUpdates, rejectedUpdates);
     }
@@ -196,7 +202,7 @@ public class RequestServiceImpl implements RequestService {
             throw new NotFoundException("User with id=" + userId + " was not found");
         }
 
-        Event event = eventRepository.findByIdAndInitiatorId(eventId, userId)
+        eventRepository.findByIdAndInitiatorId(eventId, userId)
                 .orElseThrow(() -> new NotFoundException("Event with id=" + eventId + " was not found"));
 
         List<Request> requests = requestRepository.findByEventId(eventId);
@@ -221,14 +227,6 @@ public class RequestServiceImpl implements RequestService {
                 .map(requestMapper::toRequestDto)
                 .collect(Collectors.toList());
     }
-
-    private RequestStatusUpdate convertToStatusUpdate(Request request) {
-        RequestStatusUpdate update = new RequestStatusUpdate();
-        update.setRequestIds(List.of(request.getId()));
-        update.setStatus(request.getStatus().toString());
-        return update;
-    }
-
 
 }
 
